[package]
name = "hide_my_email"
version = "0.1.3"
edition = "2021"
description = "iCloud Hide My Email implementation in Rust"
license = "WTFPL"
repository = "https://github.com/0xlunar/hide_my_email"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.11.23", features = ["cookies", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
